Fix background due to issues with background attachment on mobile.

--- a/style.css
+++ b/style.css
@@ -17,21 +17,22 @@ html {
     scroll-behavior: smooth;
 }
 
-.bgImage {
+.fullScreen { 
     width: 100%;
     height: 100%;
     margin: 0;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
 }
+
 
 .center {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+}
+
+.section {
+    padding: 10vh 0;
 }
 
 .fullWidth {
@@ -56,6 +57,38 @@ a {
     height: 100%;
     width: 100%;
     text-decoration: none;
+}
+
+.visible {
+    opacity: 1;
+    transition: all 0.7s ease-in;
+}
+  
+.hidden {
+    opacity: 0;
+    transition: all 0.7s ease-out;
+}
+
+/* BACKGROUND IMAGE */
+
+.bgImage {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: fixed;
+}
+
+#bgNormal {
+    background-image: url("images/bgSplash.png");
+    z-index: -1;
+}
+
+#bgBlue {
+    background-image: url("images/bgBio.png");
+    z-index: -2;
 }
 
 /* BANNER */
@@ -93,10 +126,6 @@ a {
     overflow: hidden;
 }
 
-#splash .bgImage {
-    background-image: url("images/bgSplash.png");
-}
-
 h1 {
     font-family: 'Castoro', serif;
     font-weight: 400;
@@ -107,9 +136,6 @@ h1 {
 }
 
 /* BIO */
-#bio .bgImage {
-    background-image: url("images/bgBio.png");
-}
 
 #bioText {
     color: #EAE7DC;
@@ -128,8 +154,11 @@ h2 {
 }
 
 /* FEATURED LISTINGS */
+#listings {
+    background-color: #EAE7DC;
+}
+
 #listings h1 {
-    margin-top: 10vh;
     color: #8E8D8A;
     text-align: left;
 }
@@ -194,8 +223,6 @@ h3 {
 #testimonials {
     background-color: #8E8D8A;
     color: #EAE7DC;
-    margin-top: 10vh;
-    padding: 10vh 0;
 }
 
 #testimonials h1 {
@@ -208,7 +235,6 @@ h3 {
 
 /* PREVIOUS SALES */
 #sales {
-    margin: 10vh 0;
     background-color: #EAE7DC;
     color: #8E8D8A;
 }
@@ -255,10 +281,6 @@ h3 {
 #contact .lBox {
     height: 100vh;
     justify-content: center;
-}
-
-#contact .bgImage {
-    background-image: url("images/bgBio.png");
 }
 
 .accounts {
